cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-pattern.yaml/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/invalid-pattern.yaml:8
8 |   pattern: print..);
  |            ^^^^^^^^^

Invalid pattern for Python:
--- pattern ---
print..);
--- end pattern ---
Pattern error: Stdlib.Parsing.Parse_error


[ERROR] Pattern parse error in rule print:
 Invalid pattern for Python:
--- pattern ---
print..);
--- end pattern ---
Pattern error: Stdlib.Parsing.Parse_error

